[gd_scene load_steps=3 format=3 uid="uid://b1gvr5arqab16"]

[ext_resource type="FontFile" uid="uid://13mkxtc7s5sw" path="res://assets/font/Wild Words Roman.ttf" id="1_4d4m4"]
[ext_resource type="Script" uid="uid://dklg5deykinpv" path="res://code/dialogue_code/example_scene.gd" id="1_6jb2h"]

[node name="ExampleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jb2h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 544.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="SpeakerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4d4m4")
theme_override_font_sizes/font_size = 26
text = "SPEAKER"

[node name="DialogueLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4d4m4")
theme_override_font_sizes/font_size = 20
text = "DIALOGUE"

[node name="OptionsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
